--- a/chatter-cloud/pom.xml
+++ b/chatter-cloud/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>spring-security-crypto</artifactId>
 			<version>3.1.0.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 
 		<!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
