--- a/chatter-cloud/src/main/resources/application.properties
+++ b/chatter-cloud/src/main/resources/application.properties
@@ -32,3 +32,6 @@ jwt.secret=secretkeyexample
 server.port = 8080
 spring.application.name = local
 spring.url = http://localhost:8080
+
+#openapi
+springdoc.swagger-ui.path=/
