--- a/chatter-cloud/src/main/resources/application.properties
+++ b/chatter-cloud/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ## PostgreSQL url, username, password
 spring.datasource.url = jdbc:postgresql://localhost:5432/chatter-local
+#spring.datasource.url = jdbc:postgresql://localhost:5432/chatter_cloud
 spring.datasource.username = postgres
 spring.datasource.password = Emir2014
 
@@ -13,17 +14,27 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 # EMAIL settings
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=lensipt@gmail.com
-spring.mail.password=InsanSifresi18
+
+# EMAIL settings
+spring.mail.host=smtp.zoho.com
+spring.mail.port=465
+spring.mail.username=petsapp@lenstech.vision
+spring.mail.password=vaqmeh-tijCu8-qubpob
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.test-connection=true
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.from=petsapp@lenstech.vision
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+spring.mail.properties.mail.smtp.ssl.enable=true
+
 
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#to display error messages
+server.error.include-message = always
 
 # Security
 jwt.secret=secretkeyexample
