List methods of getUsers are added. Some Swagger Notations are edited

--- a/chatter-cloud/src/main/resources/application.properties
+++ b/chatter-cloud/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## PostgreSQL url, username, password
-spring.datasource.url = jdbc:postgresql://localhost:5432/chatter-local
-#spring.datasource.url = jdbc:postgresql://localhost:5432/chatter_cloud
+#spring.datasource.url = jdbc:postgresql://localhost:5432/chatter-local
+spring.datasource.url = jdbc:postgresql://localhost:5432/chatter_cloud
 spring.datasource.username = postgres
 spring.datasource.password = Emir2014
 
