--- a/chatter-cloud/src/main/resources/application.properties
+++ b/chatter-cloud/src/main/resources/application.properties
@@ -46,3 +46,8 @@ spring.url = http://localhost:8080
 
 #openapi
 springdoc.swagger-ui.path=/
+
+#Firebase
+app.firebase-configuration-file  = google/push-notification-admin-sdk.json
+app.notifications.defaults = {topic: 'common', title: 'Common topic - Hello', message: 'Sending test message \uD83D\uDE42', token: 'ss22t03wz208eg:APA2idkkow223FE_0v5yHxqCLTyxAQafj6nWaqi4QzwZTW004q1PUux63UsFN', payloadMessageId: '123', payloadData: 'Hello. This is payload content.'}
+
