Mail address is edited. Shift is added to products.

--- a/chatter-cloud/src/main/resources/application.properties
+++ b/chatter-cloud/src/main/resources/application.properties
@@ -18,12 +18,12 @@ spring.datasource.hikari.maximumPoolSize=5
 # EMAIL settings
 spring.mail.host=smtp.zoho.com
 spring.mail.port=465
-spring.mail.username=petsapp@lenstech.vision
+spring.mail.username=chatter@lenstech.vision
 spring.mail.password=vaqmeh-tijCu8-qubpob
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.test-connection=true
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.from=petsapp@lenstech.vision
+spring.mail.properties.mail.smtp.from=chatter@lenstech.vision
 spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
@@ -42,7 +42,6 @@ jwt.secret=secretkeyexample
 #local profile
 server.port = 8080
 spring.application.name = local
-spring.url = http://localhost:8080
 
 #openapi
 springdoc.swagger-ui.path=/
