profiles are injected

--- a/chatter-cloud/src/main/resources/application.properties
+++ b/chatter-cloud/src/main/resources/application.properties
@@ -1,20 +1,11 @@
-## PostgreSQL url, username, password
-#spring.datasource.url = jdbc:postgresql://localhost:5432/chatter-local
-spring.datasource.url = jdbc:postgresql://localhost:5432/chatter_cloud
-spring.datasource.username = postgres
-spring.datasource.password = Emir2014
-
 # Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
-
 # EMAIL settings
-
 # EMAIL settings
 spring.mail.host=smtp.zoho.com
 spring.mail.port=465
@@ -28,25 +19,18 @@ spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
 spring.mail.properties.mail.smtp.ssl.enable=true
-
-
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
-
 #to display error messages
-server.error.include-message = always
-
+server.error.include-message=always
 # Security
-jwt.secret = secretkeyexample
-
+jwt.secret=secretkeyexample
 #local profile
-server.port = 8080
-spring.application.name = local
-
+server.port=8080
+spring.application.name=local
 #openapi
 springdoc.swagger-ui.path=/
-
 #Firebase
-app.firebase-configuration-file  = google/push-notification-admin-sdk.json
-app.notifications.defaults = {topic: 'common', title: 'Common topic - Hello', message: 'Sending test message \uD83D\uDE42', token: 'ss22t03wz208eg:APA2idkkow223FE_0v5yHxqCLTyxAQafj6nWaqi4QzwZTW004q1PUux63UsFN', payloadMessageId: '123', payloadData: 'Hello. This is payload content.'}
-
+app.firebase-configuration-file=google/push-notification-admin-sdk.json
+app.notifications.defaults={topic: 'common', title: 'Common topic - Hello', message: 'Sending test message \uD83D\uDE42', token: 'ss22t03wz208eg:APA2idkkow223FE_0v5yHxqCLTyxAQafj6nWaqi4QzwZTW004q1PUux63UsFN', payloadMessageId: '123', payloadData: 'Hello. This is payload content.'}
+spring.profiles.active=test
