DefectRegion is implemented. DefectRegion Filter for Dashboard is implemented.

--- a/chatter-cloud/src/main/resources/application.properties
+++ b/chatter-cloud/src/main/resources/application.properties
@@ -22,7 +22,8 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
 #to display error messages
-server.error.include-message=always
+#to display error messages
+server.error.include-message = always
 # Security
 jwt.secret=secretkeyexample
 #local profile
