--- a/chatter-cloud/pom.xml
+++ b/chatter-cloud/pom.xml
@@ -140,6 +140,10 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>com.google.firebase</groupId>-->
+<!--				<artifactId>firebase-admin</artifactId>-->
+<!--			</plugin>-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
