--- a/chatter-cloud/src/main/resources/application-prod.properties
+++ b/chatter-cloud/src/main/resources/application-prod.properties
@@ -1,6 +1,5 @@
-
 #PostrgreSQL
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url = jdbc:postgresql://localhost:5432/chatter_cloud
-spring.datasource.username = postgres
-spring.datasource.password = Emir2014
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://185.184.208.135:5432/chatter_cloud
+spring.datasource.username=postgres
+spring.datasource.password=Emir2014
